Table Receipt {
  ID uuid [primary key]
  IDUser uuid [not null, ref: > User.ID]
  ImageUrl varchar [not null]
  Status varchar [not null] // enum: 'pending', 'processing', 'complete', 'failed'
  CreatedDate Date [not null]
}

Table ReceiptLineItem {
  ID uuid [primary key]
  IDReceipt uuid [not null, ref: > Receipt.ID]
  Description varchar [not null]
  Quantity decimal [null]
  UnitPrice decimal [null]
  TotalPrice decimal [not null]
  CreatedDate Date [not null]
}

Table User {
  ID uuid [primary key]
  Name varchar [not null]
  Email varchar [not null]
  AvatarUrl varchar [null]
  CreatedDate Date [not null]
}

Table Session {
  ID uuid [primary key]
  IDUser uuid [not null, ref: > User.ID]
  ExpiryDate Date [not null]
  indexes {
    IDUser
  }
}

Table OAuthAccounts {
  Provider varchar [not null] // enum: 'github', 'google'
  ProviderUserId varchar [not null]
  IDUser uuid [not null, ref: > User.ID]
  indexes {
    (Provider, ProviderUserId) [pk]
  }
}
